--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html>
 <title>SE2 Correlation Visualization</title>
 <body></body>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </html>
